tests/machine/x/ocaml/pure_global_fold.ml
let k = 2
let rec inc x =
  (x + k)


let () =
  print_endline inc 3
